omhacks (0.11-2) unstable; urgency=low

  * Avoid crash in omhacks.so when it is run under a kernel that does not
    support resume_reason. Closes: #601321

 -- Timo Juhani Lindfors <timo.lindfors@iki.fi>  Mon, 25 Oct 2010 13:31:13 +0300

omhacks (0.11-1) unstable; urgency=low

  * New upstream release
     - detailed manual page
     - om wifi keep-bus-on-in-suspend [1/0]
     - initial support for Linux 2.6.32 sysfs paths
  * Explicitly specify source format to be 1.0
  * Update standards-version from 3.8.3 to 3.8.4
  * Make sleep.d/00at only an example to avoid dependency to atd and python.
    Closes: #576312

 -- Timo Juhani Lindfors <timo.lindfors@iki.fi>  Wed, 23 Jun 2010 07:17:53 -0400

omhacks (0.10-1) unstable; urgency=low

  * Fixed python typo in 00at hook

 -- Enrico Zini <enrico@debian.org>  Wed, 10 Mar 2010 21:51:26 +0100

omhacks (0.9-1) unstable; urgency=low

  * Removed useless O_CREAT. Closes: #569610
  * Install at suspend hook as executable, so it actually works.
    (thanks to lindi)
  * Manpages and usage messages greatly improved (by lindi)

 -- Enrico Zini <enrico@debian.org>  Wed, 24 Feb 2010 11:44:53 +0000

omhacks (0.8-1) unstable; urgency=low

  * New upstream release
     - om battery charger-limit [0-500] (by lindi)
     - om screen power [1/0] (by lindi)
     - om wifi maxperf <iface> [1/0] (by lindi)

 -- Enrico Zini <enrico@debian.org>  Sun, 10 Jan 2010 13:07:45 +0000

omhacks (0.7-1) unstable; urgency=low

  * New upstream release
     - Link omhacks.so pm-suspend hook to libomhacks.so
     - om ubx thanks to lindi 

 -- Enrico Zini <enrico@debian.org>  Mon, 28 Dec 2009 00:03:21 +0100

omhacks (0.6-1) unstable; urgency=low

  * New upstream release
     - Forked pm-utils-light in a separate package
     - New "om gps flowcontrol" function
     - New "om usb" functions
     - Added manpages
  * Improved package descriptions

 -- Enrico Zini <enrico@debian.org>  Fri, 18 Dec 2009 23:41:27 +0000

omhacks (0.5-1) unstable; urgency=low