@@ -1,9 +1,15 @@
 omhacks (0.11-2) unstable; urgency=low
 
+  [ Timo Juhani Lindfors ]
   * Avoid crash in omhacks.so when it is run under a kernel that does not
     support resume_reason. Closes: #601321
 
- -- Timo Juhani Lindfors <timo.lindfors@iki.fi>  Mon, 25 Oct 2010 13:31:13 +0300
+  [ Enrico Zini ]
+  * Also check error code when reading led status. There was no known bug
+    about it, but it was an unchecked error code found during a code review
+    for other unchecked error codes after #601321
+
+ -- Enrico Zini <enrico@debian.org>  Mon, 25 Oct 2010 22:28:57 +0200
 
 omhacks (0.11-1) unstable; urgency=low
 
